--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ img{
    --hearder-height: 3rem;
 
    /* change favirote color */
-   --hue-color: 278;
+   --hue-color: 270;
 
    /* hsl color mode */
    --first-color: hsl(var(--hue-color), 69%, 61%);
@@ -295,7 +295,7 @@ img{
     background-color: var(--first-color-alt);
 }
 
-.button_icon{
+.button-icon{
     font-size: 1.25rem;
     margin-left: var(--mb-0-5);
     transition: .3s;
@@ -304,6 +304,19 @@ img{
 .button--flex{
     display: inline-flex;
     align-items: center;
+}
+.button--small{
+    padding: .75rem 1rem;
+}
+
+.button--link{
+    padding: 0;
+    background-color: transparent;
+    color: var(--first-color);
+}
+.button--link:hover{
+    background-color: transparent;
+    color: var(--first-color-alt);
 }
 
 .home_blob-img{
@@ -463,60 +476,195 @@ img{
     transform: rotate(-180deg);
 }
 
-/* for small sscreen */
-@media screen and (max-width:350px){
-    .container{
-        margin-left: var(--mb-1);
-        margin-right: var(--mb-1);
-    }
-
-    .nav_menu{
-        padding: 2rem  .25rem 4rem;
-    }
-
-    .nav_list{
-        column-gap: 0;
-    }
-
-    .home_content{
-        grid-template-columns: .25fr 3fr;
-    }
-
-    .home_blub{
-        width: 180px;
-    }
-
-    
+/* qualification */
+.qualification_tabs{
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: var(--mb-2);
 }
 
-/* for medium sreen */
-@media screen and (min-width: 568px) {
-    .home_content{
-        grid-template-columns: max-content 1fr 1fr;
-    }
-    .home_data{
-        grid-column: initial;
-    }
-    .home_img{
-        justify-self: center;
-    }
+.qualification_button{
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+    cursor: pointer;
 }
 
-/* for large screen */
-
-@media sreen and (min-width: 1024px){
-    .header,
-    .main,
-    .footer_contanier{
-        padding: 0;
-    }
-
-    .home_blob{
-
-    }
-    .home_social{
-        transform:translateX(-6rem)
-    }
-    
+.qualification_button:hover{
+    color: var(--first-color);
 }
+
+.qualification_icon{
+    font-size: 1.8rem;
+    margin-right:var(--mb-0-25) ;
+}
+
+.qualification_data{
+    display: grid;
+    grid-template-columns:  1fr max-content 1fr;
+    column-gap: 1.5rem;
+}
+
+.qualification_title{
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-medium);
+}
+
+.qualification_subtitle{
+    display:inline-block;
+    font-size: var(--small-font-size);
+    margin-bottom: var(--mb-1);
+}
+
+.qualification_calendar{
+    font-size: var(--smaller-font-size);
+    color: var(--text-color-light);
+}
+
+.qualification_rounder{
+    display: inline-block;
+    width: 13px;
+    height: 13px;
+    background-color: var(--first-color);
+    border-radius: 50%;
+}
+
+.qualification_line{
+    display: block;
+    width: 1px;
+    height: 100%;
+    background-color: var(--first-color);
+    transform: translate(6px, -7px);
+}
+.qualification [data-content]{
+    display: none;
+}
+
+.qualification_active[data-content]{
+    display: block;
+}
+
+.qualification_button.qualification_active{
+    color: var(--first-color);
+}
+
+/* service */
+.services_contanier{
+    gap:1.5rem;
+    grid-template-columns: repeat(2, 1fr);
+}
+.services_content{
+    position: relative;
+    background-color: var(--container-color);
+    padding:  3.5rem .5rem 1.25rem 1.5rem;
+    border-radius: .25rem;
+    box-shadow: 0 2px 4px rgba(0,0,0,.15);
+    transition: .3s;
+}
+.services_content:hover{
+    box-shadow: 0 4px 8px rgba(0,0,0,.15);
+}
+
+.services_icon{
+    display: block;
+    font-size: 1.5rem;
+    color:var(--first-color);
+    margin-bottom: var(--mb-1);
+}
+.services_button{
+    cursor: pointer;
+    font-size: var(--small-font-size);
+}
+
+/* check this */
+.services_button:hover .button-icon{
+    transform: translateX(.25rem);
+}
+
+.services_modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 1rem;
+    z-index: var(--z-model);
+    opacity: 0;
+    visibility: hidden;
+    transition: .3s;
+}
+
+.services_modal-content{
+    position: relative;
+    background-color: var(--container-color);
+    padding: 1.5rem;
+    border-radius: .5rem;
+}
+
+.services_modal-services{
+    row-gap: 1rem;
+}
+
+.services_modal-service{
+    display: flex;
+}
+
+.services_modal-title{
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+    margin-bottom: var(--mb-1-5);
+}
+
+.services_modal-close{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 1.5rem;
+    color: var(--first-color);
+    cursor: pointer;
+}
+
+.service_modal-icon{
+   color: var(--first-color);
+   margin-right: var(--mb-0-25);
+   margin-top: 3px;
+}
+
+/* active modal */
+.active-modal{
+    opacity: 1;
+    visibility: visible;
+}
+
+/* portfolio */
+.portfolio_container{
+    overflow: initial;
+}
+
+.portfolio_content{
+    padding: 0 1.5rem;
+}
+
+.portfolio_img{
+    width: 3805px;
+    border-radius: .5rem;
+    justify-self: center;
+}
+
+.portfolio_title{
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-0-5);
+}
+
+.portfolio_description{
+    margin-bottom: var(--mb-0-75);
+}
+
+.portfolio_button:hover .button-icon{
+    transform: translateX(.25rem);
+}
+
 
