--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,8 @@ img{
    --input-color: hsl(var(--hue-color), 70%, 96%);
    --body-color: hsl(var(--hue-color), 60%, 99%);
    --container-color: #fff;
+    --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
+    --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
 
    /* fonts */
    --body-font:'Poppins', sans-serif ;
@@ -122,6 +124,32 @@ img{
         }
    }
 
+}
+/* varible dark theme */
+body.dark-theme{
+   --first-color-second:hsl(var(--hue-color), 30%, 8%) ;
+   --title-color: hsl(var(--hue-color), 8%, 95%);
+   --text-color: hsl(var(--hue-color), 8%, 75%);
+   --input-color: hsl(var(--hue-color), 29%, 16%);
+   --body-color: hsl(var(--hue-color), 28%, 12%);
+   --container-color: hsl(var(--hue-color), 29%, 16%);
+   --scroll-bar-color: hsl(var(--hue-color), 12%, 48%);
+   --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
+}
+
+/* button dark/light */
+.nav_btns{
+   display: flex;
+   align-items: center;
+}
+.change-theme{
+    font-size: 1.25rem;
+    color: var(--title-color);
+    margin-right: var(--mb-1);
+    cursor: pointer;
+}
+.change-theme:hover{
+    color: var(--first-color);
 }
 
 .header{
@@ -209,6 +237,15 @@ img{
 
 .show-menu{
     bottom: 0;
+}
+/* active-link */
+.active-link{
+    color: var(--first-color);
+}
+
+/* change background color */
+.scroll-header{
+    box-shadow: 0 -1px 4px rgba(0,0,0,.15);
 }
 
 .home_container{
@@ -307,6 +344,15 @@ img{
 }
 .button--small{
     padding: .75rem 1rem;
+}
+
+.button--white{
+    background-color: #fff;
+    color: var(--first-color);
+}
+
+.button--white:hover{
+    background-color: #fff;
 }
 
 .button--link{
@@ -558,7 +604,7 @@ img{
     padding:  3.5rem .5rem 1.25rem 1.5rem;
     border-radius: .25rem;
     box-shadow: 0 2px 4px rgba(0,0,0,.15);
-    transition: .3s;
+    transition: .1s;
 }
 .services_content:hover{
     box-shadow: 0 4px 8px rgba(0,0,0,.15);
@@ -666,5 +712,586 @@ img{
 .portfolio_button:hover .button-icon{
     transform: translateX(.25rem);
 }
+prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+ 
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 7px;
+    width: 7px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+    margin-bottom: -2.5rem;
+  }
+
+  
+  .dots {
+    cursor: pointer;
+    height: 7px;
+    width: 7px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+
+  .active, .dot:hover {
+    background-color: #9e8fbb;
+  }
+  
+  /* Fading animation */
+  
+  
+  @-webkit-keyframes fade {
+    from {opacity: .7} 
+    to {opacity: 1}
+  }
+  
+  @keyframes fade {
+    from {opacity: .7} 
+    to {opacity: 1}
+  }
+  
+  /* On smaller screens, decrease text size */
+  @media only screen and (max-width: 300px) {
+    .prev, .next,.text {font-size: 11px}
+  }
+  .project{
+      text-align: center;
+  }
+
+  .project_bg{
+      background-color: var(--first-color-second);
+      padding-top: 3rem;
+  }
+
+  .project_title{
+      font-size: var(--h2-font-size);
+      margin-bottom: var(--mb-0-75);
+  }
+
+  .project_description{
+      margin-bottom: var(--mb-1-5);
+  }
+
+  .project_title,
+  .project_description{
+      color:#fff
+  }
+
+  .project_img{
+      width: 232px;
+      justify-self: center;
+  }
+
+  /* textimonal */
+  .testimonial_data,
+  .testimonial_header{
+      display: flex;
+  }
+
+  .testimonial_data{
+      justify-content: space-between;
+      margin-bottom: var(--mb-1);
+  }
+
+  .testimonial_img{
+      width: 65px;
+      height: 65px;
+      border-radius: 50%;
+      margin-right: var(--mb-0-75)
+  }
+
+  .testimonial_name{
+      font-size: var(--h3-font-size);
+      font-weight: var(--font-medium);
+  }
+
+  .testimonial_client{
+      font-size: var(--small-font-size);
+      color: var(--text-color-light);
+  }
+
+  .testimonial_description{
+      margin-bottom: var(--mb-2-5);
+  }
+
+  .testimonial_icon-star{
+      color: var(--first-color);
+  }
 
 
+  /* contact me */
+  .contact_container{
+      row-gap:3rem;
+  }
+
+  .contact_information{
+      display: flex;
+      margin-bottom: var(--mb-2);
+  }
+
+  .contact_icon{
+      font-size: 2rem;
+      color: var(--first-color);
+      margin-right: var(--mb-0-75);
+  }
+  
+  .contact_title{
+      font-size: var(--h3-font-size);
+      font-weight: var(--font-medium);
+  }
+
+  .contact_subtitle{
+      font-size: var(--small-font-size);
+      color: var(--text-color-light);
+  }
+
+  .contact_content{
+      background-color: var(--input-color);
+      border-radius: .5rem;
+      padding: .75rem 1rem .25rem;
+  }
+   .contact_label{
+       font-size: var(--smaller-font-size);
+       color: var(--title-color);
+   }
+  .contact_input{
+      width: 100%;
+      background-color: var(--input-color);
+      color: var(--title-color);
+      font-family: var(--body-font);
+      font-size: var(--normal-font-size);
+      border: none;
+      outline:none ;
+      padding: .25rem .5rem .5rem 0;
+  }
+
+  /* footer */
+  .footer{
+      padding-top: 2rem;
+  }
+
+  .footer_container{
+    row-gap: 3.5rem;
+  }
+  
+  .footer_bg{
+      background-color: var(--first-color-second);
+      padding: 2rem 0 3rem;
+  }
+
+  .footer_title{
+      font-size: var(--h1-font-size);
+      margin-bottom: var(--mb-0-25);
+  }
+
+  .footer_subtitle{
+      font-size: var(--small-font-size);
+  }
+  .footer_links{
+      display: flex;
+      flex-direction: column;
+      row-gap: 1.5rem;
+  }
+
+  .footer_link:hover{
+      color: var(--first-color-lighter);
+  }
+
+  .footer_social{
+      font-size: 1.25rem;
+      margin-right: var(--mb-1-5);
+  }
+
+  .footer_social:hover{
+      color: var(--first-color-lighter);
+  }
+
+  .footer_copy{
+      font-size: var(--smaller-font-size);
+      text-align: center;
+      color: var(--text-color-light);
+      margin-top: var(--mb-3);
+  }
+
+  .footer_title,
+  .footer_subtitle,
+  .footer_link,
+  .footer_social{
+      color: #fff;
+  }
+
+  /* scroll up */
+  .scrollup{
+      position: fixed;
+      right: 1rem;
+      bottom: -20%;
+      background-color: var(--first-color);
+      opacity: .8;
+      padding: 0.3rem;
+      border-radius: .4rem;
+      z-index: var(--z-tooltip);
+      transition: .4s;
+  }
+
+  .scrollup:hover{
+      background-color: var(--first-color-alt);
+  }
+
+  .scrollup-icon{
+      font-size: 1.5rem;
+      color: #fff;
+  }
+
+  /* show scroll */
+  .show-scroll{
+      bottom: 5rem;
+  }
+
+  /* scroll bar */
+   ::-webkit-scrollbar{
+       width: .60rem;
+       background-color: var(--scroll-bar-color);
+       border-radius: 5rem;
+   }
+   ::-webkit-scrollbar-thumb{
+       background-color: var(--scroll-thumb-color);
+       border-radius: .5rem;
+   }
+   ::-webkit-scrollbar-thumb:hover{
+       background-color: var(--text-color-light);
+   }
+
+   /* media queries */
+    /* for small screen */
+    @media screen and (max-width: 350px){
+        .container{
+            margin-left: var(--mb-1);
+            margin-right: var(--mb-1);
+        }
+
+        .nav_menu{
+            padding: 2rem .25rem 4rem;
+        }
+        .nav_list{
+            column-gap: 0;
+        }
+
+        .home_content{
+            grid-template-columns: .25fr 3fr;
+        }
+        .home_blob{
+            width: 180px;
+        }
+
+        .skills_title{
+            font-size: var(--normal-font-size);
+        }
+
+        .qualification_data{
+            gap: .5rem;
+        }
+
+        .services_contanier{
+            grid-template-columns: max-content;
+            justify-content: center;
+        }
+        .services_content{
+            padding:3.5rem ;
+        }
+        .services_modal{
+            padding: 0 .5rem;
+        }
+        .project_img{
+            width: 200px;
+        }
+        .testimonial_data,
+        .testimonial_header{
+            flex-direction:column ;
+            align-items: center;
+        }
+
+        .testimonial_img{
+            margin-right: 0;
+            margin-bottom: var(--mb-0-25);
+        }
+        .testimonial_data,
+        .testimonial_description{
+            text-align: center;
+        }
+    }
+
+    /* medium screen */
+   @media screen and (min-width:568px) {
+       .home_content{
+           grid-template-columns: max-content 1fr 1fr;
+       }
+       .home_data{
+           grid-column: initial;
+       }
+       .home_img{
+           order: 1;
+           justify-content: center;
+       }
+
+       .about_container,
+       .skills_container,
+       .portfolio_content,
+       .project_container,
+       .contact_container,
+       .footer_container{
+           grid-template-columns: repeat(2, 1fr);
+       }
+
+       .qualification_section{
+          display: grid;
+          grid-template-columns: .6fr;
+          justify-content: center;
+       }
+       .project_container{
+           padding: 40px;
+       }
+       .project_img{
+           width: 900px;
+       }
+   }
+ 
+   @media screen and (min-width:768px){
+       .container{
+           margin-left: auto;
+           margin-right: auto;
+       }
+
+       body{
+           margin: 0;
+       }
+
+       .section{
+           padding:  6rem 0 2rem;
+       }
+       .section_subtitle{
+           margin-bottom:4rem ;
+       }
+
+       .header{
+           top: 0;
+           bottom: initial;
+       }
+
+       .header,
+       .main,
+       .footer_container{
+           padding:0 1rem ;
+       }
+       .nav{
+           height: calc(var(--hearder-height) + 1.5rem);
+           column-gap: 1rem;
+       }
+      #nav-close {
+          display: none;
+      }
+      .nav_item .nav_icon{
+         display: none;
+      }
+       .nav_toggle{
+           display: none;
+       }
+       .nav_list{
+           display: flex;
+           column-gap: 2rem;
+       }
+       .nav_menu{
+           margin-left: auto;
+       }
+
+       .change-theme{
+           margin: 0;
+       }
+
+       .home_container{
+           row-gap: 5rem;
+       }
+       .home_content{
+           padding-top: 5.5rem;
+           column-gap: 2rem;
+
+       }
+
+       .home_img{
+           width: 270px;
+       }
+       .home_scroll{
+          display: block; 
+       }
+       .home_scroll-button{
+           margin-left:3rem ;
+       }
+
+       .about_container{
+           column-gap: 5rem;
+       }
+
+       .about_img{
+           width: 350px;
+       }
+       .about_description{
+           text-align: initial;
+       }
+       .about_info{
+           justify-content: space-between;
+       }
+       .about_buttons{
+           justify-content: initial;
+       }
+
+       .qualification_tabs{
+           justify-content: center;
+       }
+       .qualification_button{
+           margin:  0 var(--mb-1);
+       }
+       .qualification_section{
+           grid-template-columns: .5fr;
+       }
+
+       .services_contanier{
+           grid-template-columns: repeat(3, 218px);
+           justify-content: center;
+       }
+       .services_icon{
+           font-size: 2rem;
+       }
+
+       .services_content{
+           padding: 6rem 0 2rem 2.5rem;
+       }
+       .services_modal-content{
+           width: 450px;
+       }
+      .portfolio_img{
+          width: 450px;
+          margin-left: 120px;
+       }
+       .portfolio_data{
+           margin-left: 120px;
+           width: 500px;
+       }
+       .testimonial_content{
+           width: 480px;
+           margin-left: 150px;
+       }
+       .portfolio_content{
+           align-items: center;
+       }
+
+       .project{
+           text-align: initial;
+       }
+       .project_bg{
+           background: none;
+       }
+
+       .project_container{
+           background-color: var(--first-color-second);
+           border-radius: 1rem;
+          
+       }
+       .project_data{
+           padding-top: .8rem;
+       }
+       .footer_container{
+           grid-template-columns: repeat(3, 1fr);
+       }
+       .footer_bg{
+           padding: 3rem 0 3.5rem;
+       }
+
+       .footer_links{
+           flex-direction: row;
+           column-gap: 2rem;
+       }
+
+       .footer_social{
+           justify-self: flex-end;
+       }
+       .footer_copy{
+           margin-top: 4.5rem;
+       }
+   }
+
+   /* for large screen */
+   @media screen and (min-width:1024px) {
+       .header,
+       .main,
+       .footer_container{
+           padding: 0;
+       }
+       .home_img{
+           width: 400px;
+       }
+       .home_social{
+           transform: translateX(-6rem);
+       }
+
+       .services_contanier{
+           grid-template-columns:repeat(3, 238px) ;
+       }
+
+       .portfolio_content{
+ 
+           column-gap: 5rem;
+       }
+       .portfolio_img{
+          width: 450px;
+          margin-left: 120px;
+       }
+       .portfolio_data{
+           margin-left: 120px;
+           width: 500px;
+       }
+       .dots{
+           font-size: 3.5rem;
+       }
+
+       .contact_form{
+           width: 460px;
+       }
+       .contact_input{
+           grid-template-columns: repeat(2,1fr);
+       }
+       .testimonial_content{
+           width: 480px;
+           margin-left: 150px;
+       }
+   }
