--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 *{
     box-sizing: border-box;
     padding: 0;
@@ -174,6 +174,7 @@ body.dark-theme{
 .nav_toggle{
     color: var(--title-color);
     font-weight: var(--font-medium);
+    font-family: 'Indie Flower', cursive;
 }
 
 .nav_logo:hover{
@@ -479,10 +480,10 @@ body.dark-theme{
     width: 80%;
 }
 .skills_js{
-    width: 60%;
+    width: 50%;
 }
 .skills_react{
-    width: 10%;
+    width: 5%;
 }
 
 .skills_php{
@@ -499,13 +500,11 @@ body.dark-theme{
 }
 
 .skills_figma{
-    width: 20%;
+    width: 10%;
 }
-.skills_sketch{
-    width: 1%;
-}
+
 .skills_photoshop{
-    width: 5%;
+    width: 0.5%;
 }
 
 .skills_close .skills_list{
@@ -589,9 +588,9 @@ body.dark-theme{
     display: block;
 }
 
-.qualification_button.qualification_active{
+/* .qualification_button.qualification_active{
     color: var(--first-color);
-}
+} */
 
 /* service */
 .services_contanier{
@@ -712,20 +711,7 @@ body.dark-theme{
 .portfolio_button:hover .button-icon{
     transform: translateX(.25rem);
 }
-prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-  }
+
   
   /* Position the "next button" to the right */
   .next {
@@ -733,10 +719,7 @@ prev, .next {
     border-radius: 3px 0 0 3px;
   }
   
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-  }
+
   
  
   
@@ -992,6 +975,26 @@ prev, .next {
    ::-webkit-scrollbar-thumb:hover{
        background-color: var(--text-color-light);
    }
+   .services_contanier{
+           grid-template-columns: repeat(1, 218px);
+           justify-content: center;
+       }
+
+    .prev, .next {
+     cursor: pointer;
+     position: absolute;
+     top: 35%;
+     width: auto;
+     padding: 5px;
+     margin-top: -22px;
+     color: white;
+     font-weight: bold;
+     font-size: 18px;
+     transition: 0.6s ease;
+     border-radius: 0 3px 3px 0;
+     user-select: none; 
+   }
+ 
 
    /* media queries */
     /* for small screen */
@@ -1050,6 +1053,7 @@ prev, .next {
         .testimonial_description{
             text-align: center;
         }
+        
     }
 
     /* medium screen */
@@ -1096,7 +1100,20 @@ prev, .next {
        body{
            margin: 0;
        }
-
+   .prev, .next {
+     cursor: pointer;
+     position: absolute;
+     top: 10%;
+     width: auto;
+     padding: 110px;
+     margin-top: -22px;
+     color: white;
+     font-weight: bold;
+     font-size: 18px;
+     transition: 0.6s ease;
+     border-radius: 0 3px 3px 0;
+     user-select: none; 
+   }
        .section{
            padding:  6rem 0 2rem;
        }
@@ -1186,7 +1203,7 @@ prev, .next {
        }
 
        .services_contanier{
-           grid-template-columns: repeat(3, 218px);
+           grid-template-columns: repeat(2, 218px);
            justify-content: center;
        }
        .services_icon{
@@ -1201,7 +1218,7 @@ prev, .next {
        }
       .portfolio_img{
           width: 450px;
-          margin-left: 120px;
+          margin-left: 135px;
        }
        .portfolio_data{
            margin-left: 120px;
@@ -1265,7 +1282,7 @@ prev, .next {
        }
 
        .services_contanier{
-           grid-template-columns:repeat(3, 238px) ;
+           grid-template-columns:repeat(2, 238px) ;
        }
 
        .portfolio_content{
@@ -1274,7 +1291,7 @@ prev, .next {
        }
        .portfolio_img{
           width: 450px;
-          margin-left: 120px;
+          margin-left: 135px;
        }
        .portfolio_data{
            margin-left: 120px;
@@ -1294,4 +1311,20 @@ prev, .next {
            width: 480px;
            margin-left: 150px;
        }
+
+    .prev, .next {
+     cursor: pointer;
+     position: absolute;
+     top: 10%;
+     width: auto;
+     padding: 110px;
+     margin-top: -22px;
+     color: white;
+     font-weight: bold;
+     font-size: 18px;
+     transition: 0.6s ease;
+     border-radius: 0 3px 3px 0;
+     user-select: none; 
+   }
+ 
    }
